Bug 326640 - "Identify Outputs" info box incorrectly centered on rotated screens
Summary: "Identify Outputs" info box incorrectly centered on rotated screens
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-25 19:07 UTC by Christoph Feck
Modified: 2013-11-14 17:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2013-10-25 19:07:49 UTC
I have a single display, which I use in portrait mode (w768 x h1024). Today's git master.

When clicking on the (i) icon ("Identify Outputs") an information box appears, displaying "LVDS1 1024x786". The position of this box is centered inside the 1024x768 rect, instead of the 768x1024 rect. In other words, on a hypothetical rotated 1000x3000 pixel screen, it would be rendered outside the screen.

Also, maybe swap the resolution displayed to reflect it is rotated, i.e. "LVDS1 768x1024".
Comment 1 Daniel Vrátil 2013-11-14 17:54:55 UTC
Git commit 4f2bfd154b5a92dd1af675da8ea90b17446e0294 by Dan Vrátil.
Committed on 14/11/2013 at 17:53.
Pushed by dvratil into branch 'master'.

Correctly position output identifiers on rotated screens
FIXED-IN: 1.0.2

M  +8    -2    kcm/src/kcm_kscreen.cpp

http://commits.kde.org/kscreen/4f2bfd154b5a92dd1af675da8ea90b17446e0294