Correctly position output identifiers on rotated screens

BUG: 326640
FIXED-IN: 1.0.2